--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,56 @@ nav ul li {
     border-radius: 10px;
     margin: 5px;
 }
-.answer.correct {
-    background-color: #28a745;
+
+
+/*Estilos de memoria*/
+
+main{
+  margin: 30px auto;
+  width: 700px;
+  display: flex;
+  align-items: center;
 }
-.answer.wrong {
-    background-color: #dc3545;
+.section1{
+  background-color: rgba(255,255,255,0.2);
+  padding: 0 10px 10px 10px;
+  border-radius: 8px;
+}
+h1{
+  text-align: center;
+  
+}
+
+.botonMemoria {
+  height: 100px;
+  width: 100px;
+  font-size: 40px;
+  font-weight: bold;
+}
+button:hover{
+  cursor: pointer;
+}
+.section2{
+  background-color: rgba(255,255,255,0.2);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  width: 250px;
+  height: 400px;
+  padding: 0 20px 0;
+}
+.estadisticas{
+  border: 1px solid white;
+  height: 105px;
+  border-radius: 8px;
+  padding: 8px 20px;
+  box-sizing: border-box;
+}
+footer{
+  text-align: center;
+}
+a{
+  text-decoration: none;
+}
+img{
+  width: 65%;
 }
